--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Webpack-template</title>
-<link href="css/page1.css" rel="stylesheet"></head>
+    <title>Document</title>
+</head>
 <body>
-    hello!
-<script type="text/javascript" src="js/page1-4852b.js"></script></body>
+    
+</body>
 </html>
