--- a/src/page-1/page-1.html
+++ b/src/page-1/page-1.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     hello!
+    <ul class="bg">
+        <li>1</li>
+        <li>2</li>
+        <li>4</li>
+    </ul>
+    <img src="../assets/code-wallpaper-18.png" alt="">
 </body>
 </html>
