--- a/src/page-2/page-2.html
+++ b/src/page-2/page-2.html
@@ -7,6 +7,8 @@
     <title>Webpack-template</title>
 </head>
 <body>
-    hello!
+    hello!!!!!!!!!!!!!
+    dsfsdf
+    <img src="../assets/nodejs.jpg" alt="">
 </body>
 </html>
